crates/data-dict/tests/snapshots/validate_spec__non_string_glossary_value.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
glossary:
  term: 42
────────────────────────────────────────
Error: [Q-1-11] YAML Validation Failed
   ╭─[ dict.yaml:4:9 ]
   │
 4 │   term: 42
   │         ─┬  
   │          ╰── Expected string, got integer
───╯
✖ At document path: `glossary.term`
ℹ Schema constraint: object > object > string
ℹ Ensure the value is a string (quoted if it contains special characters)?
